--- a/layouts/ai_page/list.html
+++ b/layouts/ai_page/list.html
@@ -1,10 +1,5 @@
 {{ define "main" }}
 
-<script
-  defer
-  src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
-></script>
-
 <style>
   /* Canvas fills full container and is behind content */
   #neuralCanvas {
@@ -59,7 +54,7 @@
       </p>
       <a
         href="/contact"
-        class="inline-block mt-10 px-8 py-3 rounded bg-green-600 hover:bg-green-100 text-white hover:text-green-950 font-semibold transition"
+        class="inline-block mt-10 px-8 py-3 bg-green-500 hover:bg-green-100 text-white hover:text-green-950 font-semibold transition"
         >Contact Us</a
       >
     </div>
