--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,13 +10,6 @@
   </div>
   <!-- End left nav -->
 
-  <!-- Right nav -->
-  <!-- Show menu sm,md -->
-  <!-- Toggle button -->
-
-  <!-- End toggle button -->
-
-  <!-- End show menu sm,md -->
 
   <!-- Show Menu lg -->
   <div class="hidden w-full lg:flex lg:items-center lg:w-auto">
@@ -281,20 +274,20 @@
             class="flex flex-col gap-y-4 gap-x-8 font-bold text-2xl max-sm:text-4xl"
           >
             <a href="/" class="hover:text-gray-700">Home</a>
-            <a href="#" class="hover:text-gray-700">Products</a>
+            <a href="/order_management_system" class="hover:text-gray-700">Products</a>
             <div
               class="subheaders ml-8 flex flex-col font-normal text-base/6 max-sm:text-base/8"
             >
               <a href="/order_management_system" class="hover:text-gray-700"
                 >OMS</a
               >
-              <a href="#" class="hover:text-gray-700">ALgorithmic Platform</a>
-              <a href="#" class="hover:text-gray-700">Algorithmic Suie</a>
-              <a href="#" class="hover:text-gray-700">Matching Engine</a>
+              <a href="/algorithmic-platform" class="hover:text-gray-700">Algorithmic Platform</a>
+              <a href="/algorithmic-suite" class="hover:text-gray-700">Algorithmic Suie</a>
+              <a href="/matching-engine" class="hover:text-gray-700">Matching Engine</a>
             </div>
-            <a href="#" class="hover:text-gray-700">Analytics</a>
-            <a href="#" class="hover:text-gray-700">AI</a>
-            <a href="#" class="hover:text-gray-700">Career</a>
+            <a href="/analytics" class="hover:text-gray-700">Analytics</a>
+            <a href="/ai_page" class="hover:text-gray-700">AI</a>
+            <a href="/careers" class="hover:text-gray-700">Career</a>
           </div>
         </div>
       </div>
