--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,11 +19,10 @@
         <ul
           class="flex flex-col gap-4 pl-10 max-sm:pr-10 pt-20 max-sm:pt-2 max-sm:pb-6 max-sm:grid max-sm:grid-cols-2 text-sm"
         >
-          <li>COMPANY</li>
-          <li>ABOUT</li>
-          <li>CAREERS</li>
-          <li>INVESTOR RELATION</li>
-          <li>LEGAL</li>
+          <li><a href="/">HOME</a></li>
+          <li><a href="/careers">CAREERS</a></li>
+          <li><a href="/contactus">CONTACT US</a></li>
+          <li><a href="/blog">BLOG</a></li>
         </ul>
       </div>
     </div>
